infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          imagePullPolicy: Never
          image: georgesirghe/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:  
  selector:
    app: client #this must be the same as the matchLabels app
  type: ClusterIP #the default is also clusteIP but I wanted to write it down so I know for sure
  ports:
    - name: client
      protocol: TCP
      port: 3000 # it is the port that is listed in the index.js where the express app is listening to
      targetPort: 3000
