infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          imagePullPolicy: Never
          image: georgesirghe/event-bus
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:  
  selector:
    app: event-bus #this must be the same as the matchLabels app
  type: ClusterIP #the default is also clusteIP but I wanted to write it down so I know for sure
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
