infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          imagePullPolicy: Never
          image: georgesirghe/posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:  
  selector:
    app: posts #this must be the same as the matchLabels app
  type: ClusterIP #the default is also clusteIP but I wanted to write it down so I know for sure
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # it is the port that is listed in the index.js where the express app is listening to
      targetPort: 4000
